--- a/trabajo final/index.html
+++ b/trabajo final/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Club deportivo atletico huila</title>
     <link rel="stylesheet" href="./assets/css/index.css">
@@ -94,6 +95,7 @@
             <p>&copy; 2023 Baldomero osorio. Todos los derechos reservados.</p>
         </div>
     </footer>
+
 </body>
 
 </html>
