--- a/trabajo final/menores.html
+++ b/trabajo final/menores.html
@@ -43,7 +43,7 @@
             <h2>PRECIOS</h2>
             <img src="./assets/img/ah6.jpeg" alt="" class="img-fluid">
         </div>
-        <div class="col-12">
+        <div class="col-12" id="formulario">
             <h2>formulario de inscripcion</h2>
             <form action="#" method="post">
                 <div class="row">
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="boton">
-                    <button class="btn btn-success" value="Enviar">ENVIAR</button>
+                    <button class="btn btn-success" value="Enviar" onclick="validarEdad()">ENVIAR</button>
                 </div>
             </form>
         </div>
@@ -108,6 +108,7 @@
             <p>&copy; 2023 Baldomero osorio. Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
